# anime

./: Cargo.toml
src/: anime.html  anime.rs  lib.rs
