[package]
name = "anime"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
skyline-web = "0.1"
rand = { git = "https://github.com/skyline-rs/rand" }

[patch.crates-io]
getrandom = { git = "https://github.com/skyline-rs/getrandom" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
